# modelmesh

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirement-doc.md
admin-ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
admin-ui/src/: App.tsx  vite-env.d.ts
admin-ui/src/api/: client.ts
admin-ui/src/components/: Layout.tsx  PrivateRoute.tsx
admin-ui/src/pages/: ChangePassword.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  Logs.tsx  Models.tsx
config/: keys.yaml  models.yaml  routing.yaml
docs/superpowers/plans/: 2026-04-03-modelmesh-phase1.md  2026-04-13-admin-ui-v2.md
docs/superpowers/specs/: 2026-04-03-modelmesh-design.md  2026-04-13-admin-ui-v2-design.md
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
modelmesh/: main.py
modelmesh/auth/: api_keys.py
modelmesh/cache/: redis_cache.py
modelmesh/config/: settings.py
modelmesh/db/: connection.py  schema.py
modelmesh/observability/: logging.py  metrics.py  request_log.py
modelmesh/providers/: anthropic_provider.py  base.py  huggingface_provider.py  ollama.py  openai_provider.py
modelmesh/registry/: model_registry.py
modelmesh/router/: circuit_breaker.py  rule_router.py  semantic_router.py
tests/: conftest.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_jwt.py  test_metrics.py  test_observability.py  test_registry.py  test_rule_router.py  test_semantic_router.py
tests/test_api/: test_chat.py  test_embeddings.py
tests/test_providers/: test_base.py  test_huggingface_provider.py  test_ollama.py  test_openai_provider.py
(+12 files in other folders)
